--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "server=.; database=CompanyEmployee; Integrated Security=true"
+    "sqlConnection": "server=(localdb)\\MSSQLLocalDB; database=CompanyEmployee; Integrated Security=true"
   },
   "AllowedHosts": "*"
 }
